# rules_cuda

./: .bazelrc  .buildifier.json  .gitignore  .pre-commit-config.yaml  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  WORKSPACE.bzlmod  index.html  renovate.json  versions.json
.bcr/: metadata.template.json  presubmit.yml
.github/: release_notes.template
.github/actions/set-build-env/: action.yaml
.github/workflows/: Set-VSEnv.ps1  build-tests.yaml  ci.bazelrc  docs-tests.yaml  github-pages.yaml  integration-tests.yaml  pre-commit.yaml  publish.yaml  release.yaml  utilities-tests.yaml  workspace_snippet.sh
0.2.1/: 404.html  index.html
0.2.1/developer/developer_docs/: index.html
0.2.1/developer/providers_docs/: index.html
0.2.1/search/: search_index.json
0.2.1/user/toolchain_config_docs/: index.html
0.2.1/user/user_docs/: index.html
0.2.3/: 404.html
0.2.3/developer/developer_docs/: index.html
0.2.3/developer/providers_docs/: index.html
0.2.3/search/: search_index.json
0.2.3/user/toolchain_config_docs/: index.html
0.2.3/user/user_docs/: index.html
0.2.4/: 404.html  index.html
0.2.4/developer/developer_docs/: index.html
0.2.4/developer/providers_docs/: index.html
0.2.4/search/: search_index.json
0.2.4/user/toolchain_config_docs/: index.html
0.3.0/: index.html
cuda/: BUILD.bazel  defs.bzl  deps.bzl  extensions.bzl  platform_alias_extension.bzl  repositories.bzl
cuda/dummy/: BUILD.bazel  libdevice.10.bc
cuda/private/: BUILD.bazel  action_names.bzl  artifact_categories.bzl  compat.bzl  cuda_helper.bzl  cuda_toolkit.bzl  cuda_versions.bzl  defs.bzl  errors.bzl  os_helpers.bzl  platforms.bzl  providers.bzl  redist_json_helper.bzl  repositories.bzl  sysroot.bzl  template_helper.bzl  toolchain.bzl  toolchain_config_lib.bzl
cuda/private/actions/: compile.bzl  dlink.bzl  dlink_wrapper.bzl  nvcc_compile.bzl  nvcc_dlink.bzl  nvcc_lib.bzl
cuda/private/macros/: cuda_binary.bzl  cuda_test.bzl
cuda/private/rules/: common.bzl  cuda_library.bzl  cuda_objects.bzl  cuda_test.bzl  cuda_toolkit.bzl  cuda_toolkit_info.bzl  flags.bzl
cuda/private/templates/: BUILD.cccl  BUILD.clang_compiler_deps  BUILD.crt  BUILD.cublas  BUILD.cuda_disabled  BUILD.cuda_shared  BUILD.cudart  BUILD.cufft  BUILD.cufile  BUILD.culibos  BUILD.cupti  BUILD.curand  BUILD.cusolver  BUILD.cusparse  BUILD.dctk_comp  BUILD.dctk_cuda  BUILD.lctk_cuda  BUILD.local_cuda_build_setting  BUILD.local_cuda_disabled  BUILD.local_cuda_headers  BUILD.local_cuda_shared  BUILD.local_toolchain_clang  BUILD.local_toolchain_nvcc  BUILD.local_toolchain_nvcc_msvc  BUILD.npp  BUILD.nvcc  BUILD.nvjitlink  BUILD.nvjpeg  BUILD.nvml  BUILD.nvrtc  BUILD.nvtx  BUILD.nvvm  BUILD.redist_json  BUILD.toolchain_clang  BUILD.toolchain_disabled  BUILD.toolchain_nvcc  BUILD.toolchain_nvcc_msvc  README.md  defs.bzl.tpl  redist.bzl.tpl  (+1 more)
cuda/private/toolchain_config/: linux.bzl  windows.bzl
cuda/private/toolchain_configs/: clang.bzl  disabled.bzl  dummy.bzl  nvcc.bzl  nvcc_msvc.bzl  utils.bzl
cuda/private/toolchain_configs/linux/: BUILD.bazel  toolchain_config.bzl
cuda/private/toolchain_configs/windows/: BUILD.bazel  toolchain_config.bzl
cuda/redistrib/: redistrib_11.4.4.json  redistrib_11.5.2.json  redistrib_11.6.2.json  redistrib_11.7.1.json  redistrib_11.8.0.json  redistrib_12.0.0.json  redistrib_12.0.1.json  redistrib_12.1.0.json
cuda/runtime/: BUILD.local_cuda  BUILD.local_cuda_disabled  BUILD.remote_cuda
cuda/templates/: BUILD.local_toolchain_clang  BUILD.local_toolchain_linux  BUILD.local_toolchain_none  BUILD.local_toolchain_nvcc  BUILD.local_toolchain_nvcc_msvc  BUILD.local_toolchain_nvcc_msvc.bazel  BUILD.local_toolchain_windows  BUILD.remote_nvcc  BUILD.remote_toolchain_nvcc  BUILD.repo_template
cuda/versions/: BUILD.bazel
docs/: .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  build-docs.sh  developer_docs.bzl  mkdocs.yaml  providers_docs.bzl  requirements.txt  toolchain_config_docs.bzl  user_docs.bzl  versioning.py
docs/mkdocs/stylesheets/: extra.css
examples/: .bazelrc  BUILD  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  WORKSPACE.bzlmod  cublas.cc  kernel.cu.cc  kernel.h  main_thrust.cc  platforms.bzl
examples/basic/: BUILD.bazel  kernel.cu  kernel.h  main.cpp
examples/basic_macros/: BUILD.bazel  main.cu
examples/cublas/: BUILD.bazel  cublas.cpp
examples/if_cuda/: BUILD.bazel  README.md  if_cuda.bzl  kernel.cu  kernel.h  main.cpp
examples/nccl/: BUILD.bazel  BUILD.nccl.bazel  WORKSPACE.bazel  nccl-tests-clang.patch  nccl-tests.BUILD  nccl-tests.bzl  nccl.BUILD  nccl.bzl
examples/optf/: BUILD.bazel  README.md  example.optf  helpers.bzl  main.cpp
examples/optf/kernels/: common.h  kernel_a.cu  kernel_a.cu.optf  kernel_a.h  kernel_b.cu  kernel_b.h
examples/rdc/: BUILD.bazel  a.cu  b.cu
examples/thrust/: BUILD.bazel  thrust.cu
latest/: 404.html  index.html
latest/search/: search_index.json
latest/stylesheets/: extra.css
private/: BUILD.local_cuda  build.bzl
tests/: BUILD.bazel  toolchain_config_lib_test.bzl
tests/flag/: BUILD.bazel  flag_test_toolchain_config.bzl  flag_validation_test.bzl
tests/flag/testonly_toolchains/: BUILD.bazel  config_sysroot_test_toolchain.bzl
tests/hermeticity/: BUILD.bazel  lib.cu  lib.h  main.cu  test.sh
tests/integration/: BUILD.to_symlink  MODULE.bazel  WORKSPACE.bazel  test_all.sh
tests/integration/toolchain_components/: BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  WORKSPACK.bazel
tests/integration/toolchain_none/: MODULE.bazel
tests/integration/toolchain_redist/: MODULE.bazel
tests/integration/toolchain_redist_json/: MODULE.bazel  WORKSPACE.bazel
tests/integration/toolchain_redist_json_collision/: BUILD.bazel  MODULE.bazel
tests/integration/toolchain_redist_json_multi/: MODULE.bazel
tests/integration/toolchain_root/: MODULE.bazel
tests/integration/toolchain_rules/: MODULE.bazel
tests/toolchain_config_lib/: BUILD.bazel  toolchain_config_lib_test.bzl
tests/utils/: BUILD.bazel  utils_test.bzl
tests/utils/cc_import_versioned_sos/: BUILD.bazel  cc_import_versioned_sos_test.bzl
(+8 files in other folders)
