module(
    name = "rules_cuda",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "platforms", version = "0.0.6")

cuda = use_extension("@rules_cuda//cuda:extensions.bzl", "toolchain")
cuda.toolkit(
    name = "cuda_toolkit",
    toolkit_path = "",
)
use_repo(cuda, "cuda_toolkit")

register_toolchains(
    "@cuda_toolkit//toolchain:nvcc-local-toolchain",
    "@cuda_toolkit//toolchain/clang:clang-local-toolchain",
    "@cuda_toolkit//toolchain/disabled:disabled-local-toolchain",
)

bazel_dep(name = "rules_cuda_examples", dev_dependency = True)
local_path_override(
    module_name = "rules_cuda_examples",
    path = "./examples",
)
