module(
    name = "rules_cuda",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.1.1")

cuda = use_extension("@rules_cuda//cuda:extensions.bzl", "toolchain")
cuda.toolkit(
    name = "cuda",
    toolkit_path = "",
)
use_repo(cuda, "cuda")

register_toolchains(
    "@cuda//toolchain:nvcc-local-toolchain",
    "@cuda//toolchain/clang:clang-local-toolchain",
    "@cuda//toolchain/disabled:disabled-local-toolchain",
)

bazel_dep(name = "rules_cuda_examples", dev_dependency = True)
local_path_override(
    module_name = "rules_cuda_examples",
    path = "./examples",
)
