module(
    name = "rules_cuda_docs",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "rules_cuda", version = "0.2.1")
local_path_override(
    module_name = "rules_cuda",
    path = "..",
)

# NOTE: cuda toolchain needs to be additionally configured. But is not required for stardoc.

bazel_dep(name = "stardoc", version = "0.6.2")
