module(
    name = "rules_cuda_docs",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "rules_cuda", version = "0.2.3")
local_path_override(
    module_name = "rules_cuda",
    path = "..",
)

cuda = use_extension("@rules_cuda//cuda:extensions.bzl", "toolchain")
cuda.local_toolchain(
    name = "local_cuda",
    toolkit_path = "",
)
use_repo(cuda, "local_cuda")

bazel_dep(
    name = "stardoc",
    version = "0.7.0",
    repo_name = "io_bazel_stardoc",
)
