module(
    name = "rules_cuda_examples",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "rules_cuda", version = "0.2.3")
local_path_override(
    module_name = "rules_cuda",
    path = "..",
)

cuda = use_extension("@rules_cuda//cuda:extensions.bzl", "toolchain")
cuda.toolkit(
    name = "cuda",
    toolkit_path = "",
)
use_repo(cuda, "cuda")

#################################
# Dependencies for nccl example #
#################################
# See WORKSPACE.bzlmod for the remaining parts
bazel_dep(name = "bazel_skylib", version = "1.4.2")
