workspace(name = "rules_cuda_examples")

local_repository(
    name = "rules_cuda",
    path = "../",
)

######################
# rules_bazel setup  #
######################
# Fetches the rules_bazel dependencies and initializes the cuda toolchain.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.

load("@rules_cuda//cuda:repositories.bzl", "rules_cuda_dependencies", "rules_cuda_toolchains")

rules_cuda_dependencies()

rules_cuda_toolchains(register_toolchains = True)

#################################
# Dependencies for nccl example #
#################################
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "nccl",
    build_file = "@rules_cuda_examples//nccl:nccl.BUILD",
    sha256 = "1866d882dd29ed1805ba12c824a8e73ae2fcd099a4b2a621a9729df843f52dd2",
    strip_prefix = "nccl-25368a7f78bae866f29e46938af94fa586c84484",
    urls = ["https://github.com/nvidia/nccl/archive/25368a7f78bae866f29e46938af94fa586c84484.tar.gz"],
)

http_archive(
    name = "nccl-tests",
    build_file = "@rules_cuda_examples//nccl:nccl-tests.BUILD",
    patch_args = [
        "-p1",
    ],
    patches = ["@rules_cuda_examples//nccl:nccl-tests-clang.patch"],
    sha256 = "946adb84f63aec66aea7aab9739d41df81c24f783e85fba6328ba243cfc057e0",
    strip_prefix = "nccl-tests-1a5f551ffd6e3271982b03a9d5653a3f6ba545fa",
    urls = ["https://github.com/nvidia/nccl-tests/archive/1a5f551ffd6e3271982b03a9d5653a3f6ba545fa.tar.gz"],
)
