workspace(name = "rules_cuda_examples")

local_repository(
    name = "rules_cuda",
    path = "../",
)

######################
# rules_bazel setup  #
######################
# Fetches the rules_bazel dependencies and initializes the cuda toolchain.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.

load("@rules_cuda//cuda:repositories.bzl", "rules_cuda_dependencies", "rules_cuda_toolchains")

rules_cuda_dependencies()

rules_cuda_toolchains(register_toolchains = True)

#################################
# Dependencies for nccl example #
#################################
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "nccl",
    build_file = "@rules_cuda_examples//nccl:nccl.BUILD",
    sha256 = "5cc6fa2e6427abc50d09573d9d00566ce478830c39e722bd431747c43a3321c9",
    strip_prefix = "nccl-361915904b456d397e6e1578f8f65ea1a45bdd28",
    urls = ["https://github.com/nvidia/nccl/archive/361915904b456d397e6e1578f8f65ea1a45bdd28.tar.gz"],
)

http_archive(
    name = "nccl-tests",
    build_file = "@rules_cuda_examples//nccl:nccl-tests.BUILD",
    patch_args = [
        "-p1",
    ],
    patches = ["@rules_cuda_examples//nccl:nccl-tests-clang.patch"],
    sha256 = "946adb84f63aec66aea7aab9739d41df81c24f783e85fba6328ba243cfc057e0",
    strip_prefix = "nccl-tests-1a5f551ffd6e3271982b03a9d5653a3f6ba545fa",
    urls = ["https://github.com/nvidia/nccl-tests/archive/1a5f551ffd6e3271982b03a9d5653a3f6ba545fa.tar.gz"],
)
