workspace(name = "rules_cuda_examples")

local_repository(
    name = "rules_cuda",
    path = "../",
)

######################
# rules_bazel setup  #
######################
# Fetches the rules_bazel dependencies and initializes the cuda toolchain.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.

load("@rules_cuda//cuda:repositories.bzl", "rules_cuda_dependencies", "rules_cuda_toolchains")

rules_cuda_dependencies()

rules_cuda_toolchains(register_toolchains = True)

#################################
# Dependencies for nccl example #
#################################
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "nccl",
    build_file = "@rules_cuda_examples//nccl:nccl.BUILD",
    sha256 = "98231f3e9732263a262e11ce0760925a6cfb3a26f065d45e49930e85ae9fbd5a",
    strip_prefix = "nccl-1933fdd6360a8bfccaa0166bd71bce363d32e5b6",
    urls = ["https://github.com/nvidia/nccl/archive/1933fdd6360a8bfccaa0166bd71bce363d32e5b6.tar.gz"],
)

http_archive(
    name = "nccl-tests",
    build_file = "@rules_cuda_examples//nccl:nccl-tests.BUILD",
    patch_args = [
        "-p1",
    ],
    patches = ["@rules_cuda_examples//nccl:nccl-tests-clang.patch"],
    sha256 = "946adb84f63aec66aea7aab9739d41df81c24f783e85fba6328ba243cfc057e0",
    strip_prefix = "nccl-tests-1a5f551ffd6e3271982b03a9d5653a3f6ba545fa",
    urls = ["https://github.com/nvidia/nccl-tests/archive/1a5f551ffd6e3271982b03a9d5653a3f6ba545fa.tar.gz"],
)
